- Don't make the content position absolute, fixing the content overflowing the footer - Add a JSP file to hold helper functions - Clean up the status sidebar - Some wording fixes - Some more css cleanups

--- a/ui/webui/tomcat/webapps/ROOT/style/webui.css
+++ b/ui/webui/tomcat/webapps/ROOT/style/webui.css
@@ -3,9 +3,8 @@
     margin-top: 8px;
     background: #fcfbf3;
     margin-bottom: 2ex;
-    position: absolute;
-    left: 224px;
-    top: 75px;
+    margin-left: 220px;
+    margin-right: 2ex;
     font-size: 0.8em;
 }
 
@@ -30,11 +29,7 @@
     margin-left: 0px;
     padding-left: 0px;
     padding-right: 5px;
-}
-
-#menu {
     font-weight: bold;
-    
 }
 
 #news {
